--- a/README
+++ b/README
@@ -2,3 +2,6 @@ CSCI 333 Data Structures AVL implementation
 
 Insert seems to be working, remove seems to be working.
 Print is in horrible shape, only prints levels.
+
+Forgot completely about in order and post order traversal print functions.
+Just added those in, thought they're late. Oops.
