--- a/README
+++ b/README
@@ -4,4 +4,4 @@ Insert seems to be working, remove seems to be working.
 Print is in horrible shape, only prints levels.
 
 Forgot completely about in order and post order traversal print functions.
-Just added those in, thought they're late. Oops.
+Just added those in, though they're late. Oops.
